force-app/main/default/objects/pdffiller_sfree__AirSlateSettings__c/fields/pdffiller_sfree__Auth_Alternative_Creds_USERS_Encrypted__c.field-meta.xml
<CustomField>
    <fullName>pdffiller_sfree__Auth_Alternative_Creds_USERS_Encrypted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auth Alternative Creds USERS Encrypted</label>
    <type>Checkbox</type>
</CustomField>