force-app/main/default/objects/pdffiller_sfree__AirSlateSettings__c/fields/pdffiller_sfree__Skip_0_Revision__c.field-meta.xml
<CustomField>
    <fullName>pdffiller_sfree__Skip_0_Revision__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Skip 0 Revision</label>
    <type>Checkbox</type>
</CustomField>