force-app/main/default/objects/pdffiller_sfree__AirSlateSettings__c/fields/pdffiller_sfree__Turn_off_opentracing_on_backend__c.field-meta.xml
<CustomField>
    <fullName>pdffiller_sfree__Turn_off_opentracing_on_backend__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Turn off opentracing on backend</label>
    <type>Checkbox</type>
</CustomField>